--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>Jordan Gaskin</h1>
-									<p>Software Developer</p>
+									<p>Software Engineer</p>
+									<h6>Hello, I'm Jordan!  I'm a full stack web developer/programmer with experience creating web apps from scratch.  My expertise lies
+										within front and back end web apps with my language tech stack being Python, C, Flask, and HTML/CSS. </h6>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
@@ -72,27 +74,7 @@
 								<header>
 									<h2>Contact Me</h2>
 								</header>
-								<form action="jgaskin1998@gmail.com" method="post">
-									<div>
-										<div class="row">
-											<div class="col-6 col-12-medium">
-												<input type="text" name="name" placeholder="Name" />
-											</div>
-											<div class="col-6 col-12-medium">
-												<input type="text" name="email" placeholder="Email" />
-											</div>
-											<div class="col-12">
-												<input type="text" name="subject" placeholder="Subject" />
-											</div>
-											<div class="col-12">
-												<textarea name="message" placeholder="Message" rows="6"></textarea>
-											</div>
-											<div class="col-12">
-												<input type="submit" value="Send Message" />
-											</div>
-										</div>
-									</div>
-								</form>
+								jgaskin1998@gmail.com
 							</article>
 
 					</div>
